--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
@@ -23,14 +23,15 @@
                     <ng-template #notUsers><label class="dropdown-item" style="text-align: center; color: gray;">No hay
                         usuarios</label></ng-template>
                     <div class="dropdown-divider"></div>
-                    <!-- <b class="dropdown-item " style="text-align: center;" (click)="onSubmitCompartirAlbum()">Enviar</b> -->
-                    <button
+                    <a class="dropdown-item "                      class="btn btn-primary"
+                     (click)="onSubmitCompartirAlbum()">Enviar</a>
+                    <!-- <button
                     class="btn btn-primary"
                     style="text-align: center;"
                     (click)="onSubmitCompartirAlbum()"
                   >
                   Enviar
-                  </button>
+                  </button> -->
                   </form>
                 </div>
               </li>
