--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -8,7 +8,7 @@
             <div class="col-12 text-center mb-2">
               <label class="fs-4 fw-bold">
 
-                <h1> Álbumes1</h1>
+                <h1> Álbumes </h1>
               </label>
 
 
@@ -64,6 +64,9 @@
                 </td>
                 <td class="ionic-td">
                   <p> {{album.anio}}</p>
+                </td>
+                <td class="ionic-td">
+                  <p> ({{album.nombre_dueno}})</p>
                 </td>
               </tr>
             </tbody>
