--- a/front-end/tutorial-canciones/src/app/album/album-join-cancion/album-join-cancion.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-join-cancion/album-join-cancion.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container" style="background-color: pink;">
+<div *ngIf="isLoaded" class="container" style="background-color: pink;">
     <div class="row justify-content-center">
       <div class="col-10">
         <div class="card mx-3 my-5">
