--- a/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
@@ -14,11 +14,11 @@
             </div>
           </div>
           <div class="card-body">
-  
+
             <div class="input-group my-2">
               <input #busqueda type="search" class="form-control" placeholder="Buscar canciones" aria-label="Search" (keyup)="buscarCancion(busqueda.value)">
             </div>
-  
+
             <table class="table table-hover mb-0" aria-describedby="colecName">
               <tbody>
                   <tr *ngFor="let cancion of mostrarCanciones; index as i" (click)="onSelect(cancion, i)" [ngClass]="{'selected': i === indiceSeleccionado}">
@@ -27,7 +27,32 @@
                   </tr>
               </tbody>
             </table>
-            
+
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <div class="row">
+              <div class="col-10 text-center">
+                <label class="fs-4">Canciones Compartidas</label>
+              </div>
+            </div>
+          </div>
+          <div class="card-body">
+
+            <div class="input-group my-2">
+              <input #busqueda type="search" class="form-control" placeholder="Buscar canciones" aria-label="Search" (keyup)="buscarCancion(busqueda.value)">
+            </div>
+
+            <table class="table table-hover mb-0" aria-describedby="colecName">
+              <tbody>
+                  <tr *ngFor="let cancion of mostrarCancionesCompartidas; index as i" (click)="onSelect(cancion, i)" [ngClass]="{'selected': i === indiceSeleccionado}">
+                    <td>{{cancion.titulo}}</td>
+                    <td>{{cancion.minutos}}:{{cancion.segundos}}</td>
+                  </tr>
+              </tbody>
+            </table>
+
           </div>
         </div>
       </div>
