--- a/front-end/tutorial-canciones/src/footer/footer.component.html
+++ b/front-end/tutorial-canciones/src/footer/footer.component.html
@@ -10,3 +10,9 @@
     </div>
   </footer>
 </div>
+
+<nav class="navbar fixed-bottom navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Fixed bottom</a>
+  </div>
+</nav>
